# CHANGELOG
##############


Version 0.4.*: 
------------
38: Removed $TMPDIR echo from rule read_annotate__phyloflash__run
37: Removed product.html output from mag_annotate__dram_mag_distill as it is not always created
36: Added more echo messages to the logfile of assemble__bowtie2__map
35: Bugfix in assemble__bowtie2__map (missing fai index)
34: Log output added for cramToBam
33: Log output for hmmsearch added for contig annotate output
32: Diamond reports now per default only the top result
31: Harded-coded paths removed from the kegg summary R script
30: Added option to provide arbitrary named self-provided assemblies.
29: tmp folder for samtools sort adjusted to add sample_id and library_id
28: --keep-going removed from default run script
27: Critical bugfix in preprocess__bowtie2__extract_nonhost_run (crashed workflow)
26: Reversed change number 24
25: Option to provide an own, existing assembly added to the Assembler module
24: Added 'phyloflash' to Phyloflash output file, to avoid potential temp file mixups between tools
23: Improved decontamination avoiding misclassified singletons
22: Added HMMER to contig_annotate and set HydDB as starting db (issue #19)
21: Database files are now copied to avoid accidental overwriting during parallele execution (issue #18)
20: Added HydDB option as additional standard Diamond search database (issue #19)
19: Stand-alone contig_annotate__eggnog throws an error, due to an missing f-string (issue #24) 
18: Included the FastQC module for the preprocess fastqs
17: Updated the default database for Phyloflash to Silva 138.2
16: Updated the read_annotate/phyloflash docker image (downgrade spades 3.15.* to 3.14.1, spades froze often in 3.15.*)
15: Accidental overwriting of camper results and db fixed (copying removed for now, issue #18)
14: Added camper to mag_annotate from dram output
13: Output path bug in dram_mag fixed
12: Output path adjusted for phylophlan result (phylophlan.tsv.tsv -> phylophlan.tsv)